--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=123456
 
 #JPA Configuration:
 spring.jpa.database=MySQL
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
-
+server.port=8085
 
 logging.level.org.hibernate.SQL=debug
 #Initialization
