--- a/pom.xml
+++ b/pom.xml
@@ -199,8 +199,16 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
-          <fork>true</fork>
+          <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
         </configuration>
+        <!-- mvn spring-boot:repackage -->
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
