--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,6 +1,6 @@
 #DB Configuration:
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/db_zz
 spring.datasource.username=root
 spring.datasource.password=123456
 
